# src/modules/carts/dtos/ICreateCartDTO.ts
@@ -1,6 +1,7 @@
 interface ICreateCartDTO {
     paid: boolean;
     user_id: number;
+    voucher_id?: number
 }
 
 export { ICreateCartDTO };
