# src/shared/infra/swagger.json
@@ -175,6 +175,96 @@
         "autoBody": true,
         "autoQuery": true,
         "autoHeaders": true
+      },
+      "put": {
+        "tags": [
+          "Carrinho"
+        ],
+        "summary": "Edita um carrinho",
+        "description": "Edita o carrinho do usuário ativo",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "paid": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "voucherId": {
+                  "type": "number",
+                  "example": 1
+                }
+              }
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id do item a ser alterado.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "integer"
+                },
+                "example": {
+                  "type": "number",
+                  "example": 1
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 999
+                },
+                "user_id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "paid": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "pay_day": {},
+                "created_at": {
+                  "type": "string",
+                  "example": "2024-07-27T00:00:00.000Z"
+                },
+                "updated_at": {
+                  "type": "string",
+                  "example": "2024-07-27T00:00:00.000Z"
+                }
+              },
+              "required": [
+                "id",
+                "user_id",
+                "paid",
+                "pay_day",
+                "created_at",
+                "updated_at"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "autoBody": true,
+        "autoQuery": true,
+        "autoHeaders": true
       }
     },
     "/item": {
@@ -592,6 +682,59 @@
                 "name": "main"
               }
             }
+          }
+        },
+        "autoBody": true,
+        "autoQuery": true,
+        "autoHeaders": true
+      }
+    },
+    "/voucher": {
+      "get": {
+        "tags": [
+          "Cupons"
+        ],
+        "summary": "Busca um cupom de desconto",
+        "description": "Busca um cupom de desconto válido",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "schema": {
+              "type": "string",
+              "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+            }
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "description": "nome do cupom de desconto",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "10%Off"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {},
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "OK"
           }
         },
         "autoBody": true,
